Bug fixed found by findbugs.
git-svn-id: http://svn.code.sf.net/p/genoviz/code/trunk@8395 80d5a9c2-7d8c-4c9f-9369-4e03bca4d2bd